--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     {% if user.is_authenticated %}
-    <form id='post-form' class="card shadow w-50 mt-3 p-3 mx-auto" action="{% url 'newpost' %}" method="post">
+    <form id='post-form' class="card shadow w-50 mt-3 p-3 mx-auto" action="{% url 'newpost' %}" method="post" style="border-radius: 15px;">
         {% csrf_token %}
         New Post:
         <textarea id="post-content" class="form-control" name="post-content"></textarea>
@@ -13,10 +13,14 @@
     </form>
     {% endif %}
     <hr>
-
+    {% if posts|length < 1 %}
+        <h2 class="card border-info mb-3 w-50 mx-auto p-5" style="border-radius: 15px;">
+            Start following users to fetch personal feed.
+        </h2>
+    {% endif %}
     {% for post in posts %}
-        <div class="card border-info mb-3 w-50 mx-auto">
-            <div class="card-header">{{post.author}}</div>
+        <div class="card border-info mb-3 w-50 mx-auto" style="border-radius: 15px;">
+            <a href="{% url 'profile' username=post.author %}" class="card-header" method='get'>{{post.author}}</a>
             <div class="card-body">
                 <h5 class="card-title" style="white-space: pre-wrap;">{{post.body}}</h5>
                 <p class="card-text" style="float: left;">{{post.timestamp}} </p>
