--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,64 +1,69 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    {% if user.is_authenticated %}
-    <form id='post-form' class="card shadow w-50 mt-3 p-3 mx-auto" action="{% url 'newpost' %}" method="post" style="border-radius: 15px;">
-        {% csrf_token %}
-        New Post:
-        <textarea id="post-content" class="form-control" name="post-content"></textarea>
-        <div id="button">
-            <button type="submit" class="btn btn-primary" id="submit-post">Post</button>
-            <button type="reset" class="btn btn-secondary" id="post-reset">Reset</button>
-        </div>
-    </form>
-    {% endif %}
-    <hr>
-    {% if posts|length < 1 %}
-        <h2 class="card border-info mb-3 w-50 mx-auto p-5" style="border-radius: 15px;">
-            No posts yet
-        </h2>
-    {% endif %}
-    {% for post in posts %}
-        <div class="card mb-3 w-50 mx-auto" style="border-radius: 15px;">
-            <div class="card-header">
-              <a href="{% url 'profile' username=post.author %}" method='get'>{{post.author}}</a>
-            </div>
-            <div class="card-body">
-                <h5 class="card-title" style="white-space: pre-wrap;">{{post.body}}</h5>
-                <p class="card-text" style="float: left;">{{post.timestamp}} </p>
-                <i class="fa fa-heart" style="float: right; color: grey;"></i>
-            </div>
-        </div>
-    {% endfor %}
+{% if user.is_authenticated %}
+<form id='post-form' class="card shadow w-50 mt-3 p-3 mx-auto" action="{% url 'newpost' %}" method="post"
+  style="border-radius: 15px;">
+  {% csrf_token %}
+  New Post:
+  <textarea id="post-content" class="form-control" name="post-content"></textarea>
+  <div id="button">
+    <button type="submit" class="btn btn-primary" id="submit-post">Post</button>
+    <button type="reset" class="btn btn-secondary" id="post-reset">Reset</button>
+  </div>
+</form>
+{% endif %}
+<hr>
+{% if posts|length < 1 %} <h2 class="card border-info mb-3 w-50 mx-auto p-5" style="border-radius: 15px;">
+  No posts yet
+  </h2>
+  {% endif %}
+  {% for post in posts %}
+  <div class="card mb-3 w-50 mx-auto" style="border-radius: 15px;" id="post-no-{{ post.id }}">
+    <div class="card-header">
+      <a href="{% url 'profile' username=post.author %}" method='get'>{{post.author}}</a>
+      {% if post.author == request.user %}
+      <i class="fa fa-edit" style="float: right; margin-right: 5px;" title="Edit Post" data-postid="{{post.id}}"
+        data-content="{{post.body}}"></i>
+      {% endif %}
+    </div>
+    <div class="card-body" >
+      <h5 class="card-title" style="white-space: pre-wrap;" id="post-body">{{post.body}}</h5>
+      <p class="card-text" style="float: left;">{{ post.timestamp }} </p>
+      <i class="fa fa-heart" style="float: right; color: grey;" title="Like Post" data-postid="{{post.id}}"></i>
+    </div>
+  </div>
+  {% endfor %}
 
-    
-    <nav aria-label="Page navigation example" class="mx-auto" style="width: fit-content;">
-      <ul class="pagination">
-        <li class="page-item">
-          {% if posts.has_previous %}
-            <form action="{% url 'index' %}" method="post">
-              {% csrf_token %}
-              <button type="submit" value="{{ posts.previous_page_number }}" name="page_no" class="page-link">Previous</button>
-            </form>
-          {% endif %}
-        </li>
-        <li class="page-item">
-          <form action="{% url 'index' %}" method="post">
-            {% csrf_token %}
-            {% for item in range_of_pages %}
-                <button type="submit" value="{{ item }}" name="page_no" class="page-link" style="float: left; border-radius: 2px;">{{ item }}</button>
-            {% endfor %}
-          </form>
-        </li>
-        <!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
-        {% if posts.has_next %}
-        <li class="page-item">
-          <form action="{% url 'index' %}" method="post">
-            {% csrf_token %}
-            <button type="submit" value="{{ posts.next_page_number }}" name="page_no" class="page-link">Next</button>
-          </form>
-        </li>  
+  <nav aria-label="Page navigation example" class="mx-auto" style="width: fit-content;">
+    <ul class="pagination">
+      <li class="page-item">
+        {% if posts.has_previous %}
+        <form action="{% url 'index' %}" method="post">
+          {% csrf_token %}
+          <button type="submit" value="{{ posts.previous_page_number }}" name="page_no"
+            class="page-link">Previous</button>
+        </form>
         {% endif %}
-      </ul>
-    </nav>
-{% endblock %}
+      </li>
+      <li class="page-item">
+        <form action="{% url 'index' %}" method="post">
+          {% csrf_token %}
+          {% for item in range_of_pages %}
+          <button type="submit" value="{{ item }}" name="page_no" class="page-link"
+            style="float: left; border-radius: 2px;">{{ item }}</button>
+          {% endfor %}
+        </form>
+      </li>
+      <!-- <li class="page-item"><a class="page-link" href="#">Next</a></li> -->
+      {% if posts.has_next %}
+      <li class="page-item">
+        <form action="{% url 'index' %}" method="post">
+          {% csrf_token %}
+          <button type="submit" value="{{ posts.next_page_number }}" name="page_no" class="page-link">Next</button>
+        </form>
+      </li>
+      {% endif %}
+    </ul>
+  </nav>
+  {% endblock %}
