--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -49,12 +49,18 @@
       </div>
       <div class="card p-4 mt-3" style="border-radius: 15px;">
         {% for post in user_profile.posts.all %}
-        <div class="card border-info mb-3" >
-          <a href="{% url 'profile' username=post.author %}" class="card-header" method='get'>{{post.author}}</a>
-          <div class="card-body">
-              <h5 class="card-title" style="white-space: pre-wrap;">{{post.body}}</h5>
-              <p class="card-text" style="float: left;">{{post.timestamp}} </p>
-              <i class="fa fa-heart" style="float: right; color: grey;">{{ post.likes }}</i>
+        <div class="card mb-3 w-100 mx-auto" style="border-radius: 15px;" id="post-no-{{ post.id }}">
+          <div class="card-header">
+            <a href="{% url 'profile' username=post.author %}" method='get'>{{post.author}}</a>
+            {% if post.author == request.user %}
+            <i class="fa fa-edit" style="float: right; margin-right: 5px;" title="Edit Post" data-postid="{{post.id}}"
+              data-content="{{post.body}}"></i>
+            {% endif %}
+          </div>
+          <div class="card-body" >
+            <h5 class="card-title" style="white-space: pre-wrap;" id="post-body">{{post.body}}</h5>
+            <p class="card-text" style="float: left;">{{ post.timestamp }} </p>
+            <i class="fa fa-heart" style="float: right; color: grey;" title="Like Post" data-postid="{{post.id}}">{{ post.likers.count }}</i>
           </div>
         </div>
         {% endfor %}
