--- a/network/templates/network/profile.html
+++ b/network/templates/network/profile.html
@@ -1,6 +1,6 @@
 {% extends 'network/layout.html' %}
 {% block body %}
-<section class="vh-100" style="background-color: #3FEEE6">
+<section class="vh-100" >
     <div class="container py-5 ">
       <div class="row d-flex h-100">
         <div class="col col-md-9 col-lg-7 col-xl-5">
