--- a/network/static/network/styles.css
+++ b/network/static/network/styles.css
@@ -6,9 +6,14 @@
     margin-left: 5px;
 }
 body {
-    background-color: #3feee6;
+    background-color: #fdf5df;
 }
 
 textarea {
     resize: none;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
 }
