--- a/network/templates/network/layout.html
+++ b/network/templates/network/layout.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg" style="background-color: #5ebec4;">
             <a class="navbar-brand" href="#">Network</a>
           
             <div>
