--- a/network/templates/network/login.html
+++ b/network/templates/network/login.html
@@ -2,12 +2,12 @@
 
 {% block body %}
 
+
+{% if message %}
+<div>{{ message }}</div>
+{% endif %}
+<div class="card shadow mx-auto w-25 p-3 mt-5" >
     <h2>Login</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
@@ -16,9 +16,12 @@
         <div class="form-group">
             <input class="form-control" type="password" name="password" placeholder="Password">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <div style="display: flex; justify-content: center">
+            <input class="btn btn-primary" type="submit" value="Login">
+        </div>
     </form>
+        Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    </div>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
 
 {% endblock %}
