--- a/network/templates/network/register.html
+++ b/network/templates/network/register.html
@@ -2,37 +2,41 @@
 
 {% block body %}
 
-    <h2>Register</h2>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+{% if message %}
+<div>{{ message }}</div>
+{% endif %}
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" name="username" placeholder="Username">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="firstname" placeholder="First Name">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="text" name="lastname" placeholder="Last Name">
-        </div>
+<div class="card shadow mx-auto w-25 p-3 mt-5" >
+        <h2>Register</h2>
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control" autofocus type="text" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="firstname" placeholder="First Name">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="lastname" placeholder="Last Name">
+            </div>
 
 
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <div style="display: flex; justify-content: center">
+                <input class="btn btn-primary" type="submit" value="Register">
+            </div>
+        </form>
+        Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    </div>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
 
 {% endblock %}
